; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/oxygen/extr_oxygen_io.c__write_uart.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/oxygen/extr_oxygen_io.c__write_uart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oxygen = type { i32 }

@OXYGEN_MPU401 = common dso_local global i64 0, align 8
@MPU401_TX_FULL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.oxygen*, i32, i32)* @_write_uart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_write_uart(%struct.oxygen* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.oxygen*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.oxygen* %0, %struct.oxygen** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.oxygen*, %struct.oxygen** %4, align 8
  %8 = load i64, i64* @OXYGEN_MPU401, align 8
  %9 = add nsw i64 %8, 1
  %10 = call i32 @oxygen_read8(%struct.oxygen* %7, i64 %9)
  %11 = load i32, i32* @MPU401_TX_FULL, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = call i32 @msleep(i32 1)
  br label %16

16:                                               ; preds = %14, %3
  %17 = load %struct.oxygen*, %struct.oxygen** %4, align 8
  %18 = load i64, i64* @OXYGEN_MPU401, align 8
  %19 = load i32, i32* %5, align 4
  %20 = zext i32 %19 to i64
  %21 = add nsw i64 %18, %20
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @oxygen_write8(%struct.oxygen* %17, i64 %21, i32 %22)
  ret void
}

declare dso_local i32 @oxygen_read8(%struct.oxygen*, i64) #1

declare dso_local i32 @msleep(i32) #1

declare dso_local i32 @oxygen_write8(%struct.oxygen*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
